--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,7 +61,7 @@
       <div class="leftspace col-md-4">
       </div>
       <div class="loginForm col-md-4">
-        <form action="/signup" method="post">
+        <form action="/login" method="post">
            <div class="formBox"><label for="username">Enter a Username
              <input type="text" name="username"></input>
            </label>
