--- a/views/login.ejs
+++ b/views/login.ejs
@@ -45,7 +45,7 @@
         </ul>
       </div>
 
-      <div class="loginForm col-md-4">
+      <!-- <div class="loginForm col-md-4">
         <form action="/login" method="post">
            <div class="formBox"><label for="username">Enter a Username
              <input type="text" name="username"></input>
@@ -61,7 +61,7 @@
            </div>
            <button type="submit">Submit</button>
          </form>
-       </div>
+       </div> -->
        <div class="rightSpace">
        </div>
    </div>
@@ -80,7 +80,8 @@
             <br> </div>
           <div class="leftBox col-md-4">
           </div>
-        </div <form action="/signup" method="post">
+        </div>
+        <form action="/login" method="post">
         <div class="formBox">
           <label for="username">Enter a Username
             <br>
