--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -58,7 +58,7 @@
         <div id='map'></div>
       </div>
       <div class='col-md-8'>
-        <form class="form-horizontal">
+        <form class="form-horizontal" method="POST" action="/aptSch">
           <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label"></label>
             <div class="col-sm-10">
