--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,3 @@
-#map {
-  height: 500px;
-  width: 500px;
-}
 
 cd body {
   padding: 50px;
@@ -25,10 +21,11 @@ html, body {
   padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
 
-
-/*.row {
+/*LKH edit:  If used on another page, please update tag names to be page specific
+.row {
   text-align: center;
-}*/
+}
+*/
 
 .thumbnails {
     text-align:center;
@@ -64,37 +61,6 @@ background-image: -moz-linear-gradient(right bottom, #6949DE 0%, #6BFFCE 100%, #
 background-image: -webkit-linear-gradient(right bottom, #6949DE 0%, #6BFFCE 100%, #FF0000 100%);
 background-image: -ms-linear-gradient(right bottom, #6949DE 0%, #6BFFCE 100%, #FF0000 100%);
 background-image: linear-gradient(to right bottom, #6949DE 0%, #6BFFCE 100%, #FF0000 100%);
-}
-
-/*footer */
-.panel {
-  transform: translateY(100%);
-  height: 150px;
-  clear:both;
-  padding-top:20px;
-}
-
-/*aptSch form */
-input.form-control {
-  margin:2em;
-}
-button.btn-default {
-  margin:2em;
-}
- h1.aptSchHeader {
-   text-align:center;
-   padding-bottom:0.5em;
- }
-
-
-
-/* pref page */
-.prefHeader {
-  text-align: center;
-}
-#form-group-pref {
-  margin: 2em;
-
 }
 
 
@@ -148,14 +114,17 @@ background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);
 .title {
   padding-top: 150px;
 }
-/*.form-group{
+
+/*LKH edit: too much padding on the pref form. If used on another page, please update tag names to be page specific
+.form-group{
   padding-top: 50px;
-}*/
+
 .prefForm {
   background-color: white;
   width: 50%;
 }
-
+END LKH edit
+*/
 
 /*.signupForm:hover{109CFF
   background-color: -webkit-gradient(
@@ -180,3 +149,44 @@ background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);
 div:hover {
   background-color: green;
 }*/
+
+
+
+/* LINDSAY EDITS */
+#map {
+  height: 500px;
+  width: 500px;
+}
+
+/*footer */
+.panel {
+  transform: translateY(100%);
+  height: 150px;
+  clear:both;
+  padding-top:20px;
+}
+
+/*aptSch form */
+input.form-control {
+  margin:2em;
+}
+button.btn-default {
+  margin:2em;
+}
+ h1.aptSchHeader {
+   text-align:center;
+   padding-bottom:0.5em;
+ }
+
+
+/* pref page */
+.prefHeader {
+  text-align: center;
+}
+#form-group-pref {
+  margin-top: 0.5em;
+}
+.col-sm-2 {
+  margin-top:2em;
+  margin-right:-2em;
+}
